Aging timers, bug-fixes